<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_video_thumb"
        android:layout_width="119dp"
        android:layout_height="85dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/thumbnail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ph_image_view" />

    <TextView
        android:id="@+id/tv_video_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/unknown"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_video_thumb"
        app:layout_constraintTop_toTopOf="@+id/iv_video_thumb" />

    <TextView
        android:id="@+id/tv_video_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/unknown"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_video_thumb"
        app:layout_constraintTop_toBottomOf="@+id/tv_video_title" />

    <TextView
        android:id="@+id/tv_video_published_at"
        android:layout_width="wrap_content"
        android:layout_height="14dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/unknown"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_video_subtitle_language"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/iv_ic_audio"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/video_audio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_video_thumb"
        app:srcCompat="@mipmap/ic_record_voice_over_black" />

    <TextView
        android:id="@+id/tv_video_audio_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/unknown"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_ic_audio"
        app:layout_constraintTop_toTopOf="@+id/iv_ic_audio" />

    <ImageView
        android:id="@+id/iv_ic_subtitle"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/video_subtitle"
        app:layout_constraintStart_toEndOf="@+id/tv_video_audio_language"
        app:layout_constraintTop_toBottomOf="@+id/iv_video_thumb"
        app:srcCompat="@mipmap/ic_translate_black" />

    <TextView
        android:id="@+id/tv_video_subtitle_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/unknown"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintBottom_toBottomOf="@+id/iv_ic_subtitle"
        app:layout_constraintStart_toEndOf="@+id/iv_ic_subtitle"
        app:layout_constraintTop_toTopOf="@+id/iv_ic_subtitle" />


</android.support.constraint.ConstraintLayout>