<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.VideoDetailActivity">

    <ImageView
        android:id="@+id/iv_video_detail_thumb"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:scaleType="fitXY"
        app:srcCompat="@mipmap/ph_image_view" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginTop="240dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_video_detail_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/unknown"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_video_detail_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/unknown"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_video_detail_title" />

            <ImageView
                android:id="@+id/iv_ic_audio"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/video_audio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_video_detail_description"
                app:srcCompat="@mipmap/ic_record_voice_over_black" />

            <TextView
                android:id="@+id/tv_video_audio_language"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:text="@string/unknown"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintBottom_toBottomOf="@+id/iv_ic_audio"
                app:layout_constraintStart_toEndOf="@+id/iv_ic_audio"
                app:layout_constraintTop_toTopOf="@+id/iv_ic_audio" />

            <ImageView
                android:id="@+id/iv_ic_subtitle"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/video_subtitle"
                app:layout_constraintBottom_toBottomOf="@+id/tv_video_audio_language"
                app:layout_constraintStart_toEndOf="@+id/tv_video_audio_language"
                app:layout_constraintTop_toTopOf="@+id/tv_video_audio_language"
                app:srcCompat="@mipmap/ic_translate_black" />

            <TextView
                android:id="@+id/tv_video_subtitle_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/unknown"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintBottom_toBottomOf="@+id/iv_ic_subtitle"
                app:layout_constraintStart_toEndOf="@+id/iv_ic_subtitle"
                app:layout_constraintTop_toTopOf="@+id/iv_ic_subtitle" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_playlist_videos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:minHeight="180dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_ic_audio" />

            <include
                layout="@layout/layout_connection_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/rv_playlist_videos"
                app:layout_constraintEnd_toEndOf="@+id/rv_playlist_videos"
                app:layout_constraintStart_toStartOf="@+id/rv_playlist_videos"
                app:layout_constraintTop_toTopOf="@+id/rv_playlist_videos" />

            <TextView
                android:id="@+id/tv_playlist_videos_others"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/others"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintBottom_toTopOf="@+id/rv_playlist_videos"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_ic_audio" />


        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>